# imkur

./: .gitignore  .gitmodules  LICENSE  flake.nix  meson.build
plugins/: blur_filter.cpp  pencil.cpp  plugin_base.cpp  plugin_base.hpp
src/: app.cpp  app.hpp  common.cpp  common.hpp  config.hpp  editor.cpp  editor.hpp  main.cpp  plugins_manager.cpp  plugins_manager.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp
